--- a/web/M1/venditore.html
+++ b/web/M1/venditore.html
@@ -25,8 +25,8 @@ and open the template in the editor.
                 <textarea rows="4" cols="20" name="descrizione" id="descrizione">Descrizione dell'oggetto</textarea><br/>
                 <label for="prezzo">Prezzo: </label>
                 <input type="text" name="prezzo" id="prezzo" value=" €"/><br/>
-                <label for="quantita">Quantità: </label>
-                <input type="text" name="quantita" id="quantita'" value="Numero pezzi"/><br/>
+                <label for="quantita'">Quantità: </label>
+                <input type="text" name="quantita'" id="quantita'" value="Numero pezzi"/><br/>
                 
          </form>
             <br><br>
